tests/paczka1/fuzzy1/74985430.err
Error in line 4: n8poDwzyAeZ A293 20,4
Error in line 9: n8poDwzyAeZ S16d 33,1
Error in line 13: n8poDwzyAeZ A293 72,8
Error in line 6: infHyl6FiU S160 96,3
Error in line 17: infHyl6FiU S519 23,3
Error in line 14: n8poDwzyAeZ S519 98,8
Error in line 21: mfSBio S160 87,3
Error in line 35: infHyl6FiU S519 56,4
